--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "expo": "~48.0.18",
+    "expo-checkbox": "^2.4.0",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-check-box": "^2.1.7",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.5.0",
