--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.7",
@@ -17,7 +17,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "expo": "~48.0.18",
-    "expo-checkbox": "^2.4.0",
+    "expo-checkbox": "~2.3.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
