--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.9",
     "expo": "~48.0.18",
     "expo-checkbox": "~2.3.1",
+    "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
