--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-native-check-box": "^2.1.7",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-read-more-text": "^1.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
