--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-check-box": "^2.1.7",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.5.0",
