--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-check-box": "^2.1.7",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "1.3.2",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-read-more-text": "^1.1.2",
