--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "expo-checkbox": "2.3.1",
     "expo-device": "5.2.1",
     "expo-font": "11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-check-box": "2.1.7",
+    "react-native-draggable-grid": "^2.1.7",
     "react-native-google-places-autocomplete": "2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-modal": "13.0.1",
