--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "48.0.18",
     "expo-checkbox": "2.3.1",
     "expo-device": "5.2.1",
+    "expo-file-system": "~15.2.2",
     "expo-font": "11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "1.4.4",
