--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "travel-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "author": {
+    "name": "Anh em song tuat",
+    "url": "http://103.122.163.148:4000/"
+  },
+  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
