--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "expo-file-system": "~15.2.2",
     "expo-font": "11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-localization": "^14.3.0",
     "expo-status-bar": "1.4.4",
+    "i18n-js": "3.8.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-check-box": "2.1.7",
@@ -43,6 +45,7 @@
     "react-native-screens": "3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-swiper": "1.6.0",
+    "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "9.2.0",
     "react-redux": "8.1.1",
     "redux": "4.2.1",
