--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "expo-localization": "^14.3.0",
     "expo-status-bar": "1.4.4",
     "i18n-js": "3.8.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-check-box": "2.1.7",
+    "react-native-date-picker": "^4.2.14",
     "react-native-draggable-grid": "^2.1.7",
     "react-native-google-places-autocomplete": "2.5.1",
     "react-native-maps": "1.3.2",
