--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/checkbox": "0.5.16",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "6.5.8",
     "@react-navigation/native": "6.1.7",
     "@react-navigation/native-stack": "6.9.13",
@@ -42,6 +43,7 @@
     "react-native-modal": "13.0.1",
     "react-native-modal-datetime-picker": "17.0.0",
     "react-native-phone-number-input": "2.1.0",
+    "react-native-picker-select": "^8.1.0",
     "react-native-read-more-text": "1.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "3.20.0",
